CMAKE_MINIMUM_REQUIRED(VERSION 3.11)

SET(PROJECT_NAME "threadpool")

PROJECT(${PROJECT_NAME})

add_compile_options(-std=c++11)

SET(HEADER_FILES 
    ${CMAKE_SOURCE_DIR}/task.h 
    ${CMAKE_SOURCE_DIR}/threadpool.h)
MESSAGE(STATUS ${HEADER_FILES})

AUX_SOURCE_DIRECTORY(${CMAKE_SOURCE_DIR} SRC_FILES)
MESSAGE(STATUS ${SRC_FILES})

ADD_EXECUTABLE(${PROJECT_NAME}  ${HEADER_FILES} ${SRC_FILES})
